--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "preinstall": "npm install -g angular-cli",
+    "postinstall": "ng build && mv dist/* .",
     "e2e": "ng e2e"
   },
   "private": false,
@@ -48,5 +50,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "6.4.1"
   }
 }
