--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "preinstall": "npm install -g angular-cli",
     "postinstall": "ng build && mv dist/* .",
     "e2e": "ng e2e"
   },
@@ -16,6 +15,7 @@
     "@angular/animations": "~9.1.6",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.6",
+    "@angular/cli": "7.3.9",
     "@angular/compiler": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
