--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "keen-slider": "^3.1.1",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.5.4",
     "susy": "^3.0.5",
     "tslib": "^1.10.0",
@@ -44,7 +45,6 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "node-sass": "^4.14.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
