--- a/angular.json
+++ b/angular.json
@@ -125,7 +125,8 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
