--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "concurrently \"ng serve\" \"node twitchAPI_sandbox/ index\"",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.901.5",
     "@angular/animations": "~9.1.6",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.6",
     "@angular/cli": "~9.1.5",
+    "@angular/common": "~9.1.6",
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/core": "~9.1.6",
@@ -23,12 +24,12 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@angular-devkit/build-angular": "~0.901.5",
+    "concurrently": "^5.3.0",
     "node-sass": "^4.14.1",
-    "typescript": "~3.8.3",
     "rxjs": "~6.5.4",
     "susy": "^3.0.5",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
